# xwin-xdg-menu

./: .gitignore  COPYING  Makefile.am  README  TODO  X-Cygwin-Settings.directory  appveyor.sh  appveyor.yml  configure.ac  execute.c  execute.h  main.c  menu.c  menu.h  meson.build  msgwindow.c  msgwindow.h  resource.h  resource.rc  trayicon.c  trayicon.h  update-version  xwin-applications.menu  xwin-xdg-menu.1  xwin-xdg-menu.exe.manifest
